docs: added swagger api for v1.Tag.List
